--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "moment": "^2.30.1",
     "next": "14.2.3",
     "react": "^18",
     "react-calendar": "^5.0.0",
